RESOLVED FIXED225957
allowsContentJavaScript API not applied from defaultWebpagePreferences
https://bugs.webkit.org/show_bug.cgi?id=225957
Summary allowsContentJavaScript API not applied from defaultWebpagePreferences
Tim Horton
Reported 2021-05-18 19:16:10 PDT
allowsContentJavaScript API not applied from defaultWebpagePreferences
Attachments
Patch (3.32 KB, patch)
2021-05-18 19:16 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2021-05-18 19:16:28 PDT
Tim Horton
Comment 2 2021-05-18 19:16:40 PDT
I checked, this is the only one missing.
EWS
Comment 3 2021-05-18 20:11:03 PDT
Committed r277713 (237892@main): <https://commits.webkit.org/237892@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 429022 [details].
Radar WebKit Bug Importer
Comment 4 2021-05-18 20:12:17 PDT
Darin Adler
Comment 5 2021-05-19 10:34:41 PDT
Comment on attachment 429022 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=429022&action=review > Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewEvaluateJavaScript.mm:443 > + RetainPtr<WKWebpagePreferences> preferences = adoptNS([[WKWebpagePreferences alloc] init]); auto > Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewEvaluateJavaScript.mm:446 > + RetainPtr<WKWebViewConfiguration> configuration = adoptNS([[WKWebViewConfiguration alloc] init]); auto > Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewEvaluateJavaScript.mm:449 > + RetainPtr<TestWKWebView> webView = adoptNS([[TestWKWebView alloc] initWithFrame:NSMakeRect(0, 0, 800, 600) configuration:configuration.get()]); auto
Note You need to log in before you can comment on or make changes to this bug.