Cherry-pick r277713. rdar://problem/78264364

allowsContentJavaScript API not applied from defaultWebpagePreferences
    https://bugs.webkit.org/show_bug.cgi?id=225957

    Reviewed by Wenson Hsieh.

    New API test: WebKit.AllowsContentJavaScriptFromDefaultPreferences

    * UIProcess/API/APIWebsitePolicies.cpp:
    (API::WebsitePolicies::copy const):
    allowsContentJavaScript works fine on the per-navigation-level WKWebpagePreferences,
    but is ignored if applied on the WKWebViewConfiguration's defaultWebpagePreferences,
    because it is not copied in copy(). Copy it!

    Canonical link: https://commits.webkit.org/237892@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277713 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/232923.503@safari-611-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-611-branch@277815 268f45cc-cd09-0410-ab3c-d52691b4dbfc